--- a/app/src/main/res/layout/activity_transactions.xml
+++ b/app/src/main/res/layout/activity_transactions.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     android:background="@drawable/a"
-    tools:context=".Transactions">
+    tools:context=".Activities.Transactions">
 
     <include
         android:id="@+id/app_bar_history"
