--- a/app/src/main/res/layout-sw600dp/invoice.xml
+++ b/app/src/main/res/layout-sw600dp/invoice.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,24 +8,14 @@
         android:id="@+id/app_bar_history"
         layout="@layout/app_bar">
     </include>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical" android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="15dp"
+        android:layout_marginStart="15dp"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginStart="40dp"
-            android:text="Invoice"
-            android:textSize="40dp"
-            android:textColor="#000"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="22dp"
-            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/transId"
@@ -43,50 +33,43 @@
             android:id="@+id/t_trans_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="12345"
-            android:textColor="@color/zxing_custom_result_view"
             android:layout_alignBottom="@+id/transId"
-            android:layout_toRightOf="@+id/transId"
-            android:layout_toEndOf="@+id/transId"
             android:layout_marginLeft="24dp"
-            android:layout_marginStart="24dp" />
+            android:layout_marginStart="24dp"
+            android:layout_toEndOf="@+id/transId"
+            android:layout_toRightOf="@+id/transId"
+            android:text="12345"
+            android:textColor="@color/zxing_custom_result_view" />
 
         <TextView
+            android:id="@+id/textView11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/transId"
+            android:layout_marginTop="20dp"
             android:text="Date:"
             android:textColor="@android:color/background_dark"
-            android:textSize="24sp"
-            android:layout_alignBaseline="@+id/t_trans_id"
-            android:layout_alignBottom="@+id/t_trans_id"
-            android:layout_toRightOf="@+id/t_trans_id"
-            android:layout_toEndOf="@+id/t_trans_id"
-            android:layout_marginLeft="102dp"
-            android:layout_marginStart="102dp"
-            android:id="@+id/textView11" />
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/t_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/t_trans_id"
-            android:layout_marginLeft="28dp"
-            android:layout_marginStart="28dp"
-            android:layout_toEndOf="@+id/textView11"
-            android:layout_toRightOf="@+id/textView11"
+            android:layout_above="@+id/textView13"
+            android:layout_marginLeft="70dp"
             android:text="25-05-2017" />
 
         <TextView
             android:id="@+id/textView13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/transId"
             android:layout_alignLeft="@+id/transId"
-            android:layout_alignRight="@+id/transId"
             android:layout_alignStart="@+id/transId"
             android:layout_below="@+id/textView11"
-            android:layout_marginTop="96dp"
-            android:text="Customer Name:"
+            android:layout_marginTop="36dp"
+            android:layout_toLeftOf="@+id/t_trans_id"
+            android:layout_toStartOf="@+id/t_trans_id"
+            android:text="Name:"
             android:textColor="@android:color/background_dark"
             android:textSize="24sp" />
 
@@ -95,44 +78,42 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView13"
-            android:layout_alignLeft="@+id/t_trans_id"
-            android:layout_alignStart="@+id/t_trans_id"
-            android:text="xyz" />
+            android:layout_alignLeft="@+id/textView13"
+            android:layout_marginLeft="80dp"
+            android:text="xyzafd" />
 
         <TextView
             android:id="@+id/textView15"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/t_cust_name"
-            android:layout_alignLeft="@+id/textView11"
-            android:layout_alignStart="@+id/textView11"
+            android:layout_toLeftOf="@+id/t_contact"
             android:text="Contact:"
             android:textColor="@android:color/background_dark"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:layout_alignTop="@+id/textView13" />
 
         <TextView
             android:id="@+id/t_contact"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/t_cust_name"
-            android:layout_marginLeft="35dp"
-            android:layout_marginStart="35dp"
-            android:layout_toEndOf="@+id/textView15"
-            android:layout_toRightOf="@+id/textView15"
-            android:text="123456789" />
+            android:layout_alignBaseline="@+id/t_cust_name"
+            android:layout_alignBottom="@+id/t_cust_name"
+            android:layout_alignEnd="@+id/imageView"
+            android:layout_alignRight="@+id/imageView"
+            android:text="123456789"  />
 
         <TextView
             android:id="@+id/textView17"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/textView13"
-            android:layout_alignRight="@+id/textView13"
-            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignTop="@+id/imageView"
+            android:layout_marginTop="48dp"
             android:text="From:"
             android:textColor="@android:color/background_dark"
-            android:textSize="24sp"
-            android:layout_alignLeft="@+id/textView13"
-            android:layout_alignStart="@+id/textView13" />
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/textView18"
@@ -143,24 +124,48 @@
             android:layout_alignRight="@+id/textView17"
             android:layout_alignStart="@+id/textView13"
             android:layout_below="@+id/textView17"
-            android:layout_marginTop="63dp"
+            android:layout_marginTop="43dp"
             android:text="To:"
             android:textColor="@android:color/background_dark"
             android:textSize="24sp" />
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            android:background="@drawable/qr_img"
-            android:layout_alignBottom="@+id/textView18"
-            android:layout_alignLeft="@+id/textView15"
-            android:layout_alignStart="@+id/textView15" />
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_below="@+id/t_contact"
+            android:layout_marginLeft="120dp"
+            android:layout_marginTop="30dp"
+            android:layout_toEndOf="@+id/t_trans_id"
+            android:layout_toRightOf="@+id/t_trans_id"
+            android:background="@drawable/qr_img" />
+
+        <TextView
+            android:id="@+id/t_from"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/textView17"
+            android:layout_toLeftOf="@+id/t_cust_name"
+            android:layout_toStartOf="@+id/t_cust_name"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/t_to"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_below="@+id/t_from"
+            android:layout_alignEnd="@+id/t_from"
+            android:layout_alignRight="@+id/t_from"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="53dp"
+            android:text="TextView" />
+
         <ScrollView
-            android:layout_below="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp">
+            android:layout_below="@+id/imageView"
+            android:layout_marginTop="40dp">
+
             <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -170,90 +175,105 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:text="Fare Type"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="1"
-                        android:textColor="#000"
                         android:layout_marginLeft="40dp"
-                        android:textSize="20dp"/>
+                        android:text="Fare Type"
+                        android:textColor="#000"
+                        android:textSize="24dp" />
+
                     <TextView
-                        android:text="Net"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="2"
+                        android:layout_marginLeft="60dp"
+                        android:text="Net"
                         android:textColor="#000"
-                        android:layout_marginLeft="150dp"
-                        android:textSize="20dp"/>
+                        android:textSize="24dp" />
+
                     <TextView
-                        android:text="Fare"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="3"
+                        android:layout_marginLeft="30dp"
+                        android:text="Fare"
                         android:textColor="#000"
-                        android:layout_marginLeft="50dp"
-                        android:textSize="20dp"/>
+                        android:textSize="24dp" />
+
                     <TextView
-                        android:text="Qty"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="4"
+                        android:layout_marginLeft="30dp"
+                        android:text="Qty"
                         android:textColor="#000"
-                        android:layout_marginLeft="50dp"
-                        android:textSize="20dp"/>
+                        android:textSize="24dp" />
+
                     <TextView
-                        android:text="Total"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="5"
+                        android:layout_marginLeft="30dp"
+                        android:text="Total"
                         android:textColor="#000"
-                        android:layout_marginLeft="50dp"
-                        android:textSize="20dp"/>
+                        android:textSize="24dp" />
 
                 </TableRow>
 
                 <TableRow android:background="@color/colorPrimary">
 
                     <TextView
-                        android:text="First Name"
+                        android:id="@+id/fareType"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="1"
-                        android:layout_marginLeft="50dp"/>
-
-
-                </TableRow>
-
-                <TableRow>
-
+                        android:layout_marginLeft="40dp"
+                        />
                     <TextView
-                        android:text="Last Name"
+                        android:id="@+id/net"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_column="1" />
+                        android:layout_column="2"
+                        android:layout_marginLeft="60dp"
+                        android:text="Net"
+                        android:textColor="#000"
+                        android:textSize="24dp" />
+
+                    <TextView
+                        android:id="@+id/farePrice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_column="3"
+                        android:layout_marginLeft="30dp"
+                        android:text="Fare"
+                        android:textColor="#000"
+                        android:textSize="24dp" />
+
+                    <TextView
+                        android:id="@+id/no_of_persons"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_column="4"
+                        android:layout_marginLeft="30dp"
+                        android:text="Qty"
+                        android:textColor="#000"
+                        android:textSize="24dp" />
+
+                    <TextView
+                        android:id="@+id/total"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_column="5"
+                        android:layout_marginLeft="30dp"
+                        android:text="Total"
+                        android:textColor="#000"
+                        android:textSize="24dp" />
 
                 </TableRow>
-
-                <TableRow
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
-
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"/>
-
-                <TableRow
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
-
-                </TableRow>
-
             </TableLayout>
         </ScrollView>
-
-
     </RelativeLayout>
+
+
 </LinearLayout>
