--- a/app/src/main/res/layout/row_transaction_layout.xml
+++ b/app/src/main/res/layout/row_transaction_layout.xml
@@ -3,11 +3,12 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="145dp">
     <LinearLayout
-        android:layout_width="150dp"
+        android:layout_width="110dp"
         android:layout_height="137dp"
         android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
         android:paddingBottom="5dp"
+        android:layout_marginLeft="15dp"
         android:orientation="vertical">
 
         <TextView
@@ -25,7 +26,7 @@
             android:layout_height="wrap_content"
 
             android:text="$350"
-            android:textSize="25sp"
+            android:textSize="35sp"
             android:gravity="left"
             android:textStyle="bold"
             android:layout_marginTop="10dp"
@@ -57,6 +58,17 @@
 
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="1dp"
+        android:layout_height="137dp"
+        android:orientation="vertical">
+        <View
+            android:layout_marginTop="13dp"
+            android:layout_width="3dp"
+            android:layout_height="110dp"
+            android:layout_marginBottom="13dp"
+            android:background="#C0C0C0"/>
+    </LinearLayout>
     <!--<ImageView-->
     <!--android:layout_width="wrap_content"-->
     <!--android:layout_height="wrap_content"-->
@@ -70,6 +82,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:weightSum="1"
+        android:layout_marginLeft="10dp"
         android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
         android:orientation="vertical">
@@ -107,70 +120,67 @@
             android:textStyle="bold" />
 
         <LinearLayout
+            android:layout_marginLeft="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
-            android:orientation="horizontal">
+            android:layout_marginBottom="3dp"
+            android:background="@drawable/border_transactions"
+            android:orientation="vertical"
+            android:padding="3dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:textColor="#C0C0C0"
                 android:textStyle="bold"
                 android:labelFor="@+id/tvNumberOfPersons"
                 android:text="No. of Persons" />
-            <View
-                android:layout_width="20dp"
-                android:layout_height="match_parent"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:textColor="#C0C0C0"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:text="Ticket Price" />
-
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:weightSum="1"
-
-            android:orientation="horizontal">
             <TextView
                 android:id="@+id/tvNumberOfPersons"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="40dp"
                 android:textColor="#C0C0C0"
                 android:text="10"
-                android:textSize="19sp"
                 android:textStyle="bold"
-                android:layout_marginBottom="7dp"
-                android:paddingRight="10dp"
-                android:gravity="center"
-                android:layout_weight=".40"/>
+                android:textSize="19sp" />
 
+        </LinearLayout>
             <View
-                android:layout_width="17dp"
-                android:layout_height="match_parent"
-                />
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="3dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp"
+            android:background="@drawable/border_transactions"
+            android:orientation="vertical">
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#C0C0C0"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:text="Ticket Price" />
             <TextView
                 android:id="@+id/tvCPPP"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight=".40"
+                android:layout_marginLeft="25dp"
                 android:textSize="19sp"
                 android:gravity="center"
                 android:textColor="#C0C0C0"
                 android:text="20"
-                android:layout_marginBottom="5dp"
                 android:textStyle="bold"
 
                 />
@@ -178,6 +188,6 @@
 
         </LinearLayout>
 
-
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
