--- a/app/src/main/res/layout/invoice.xml
+++ b/app/src/main/res/layout/invoice.xml
@@ -154,11 +154,11 @@
             android:id="@+id/imageView"
             android:layout_width="110dp"
             android:layout_height="110dp"
-            android:layout_above="@+id/textView15"
-            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="31dp"
+            android:layout_marginRight="31dp"
+            android:layout_alignBottom="@+id/t_date"
             android:layout_alignParentRight="true"
-            android:layout_marginEnd="38dp"
-            android:layout_marginRight="38dp" />
+            android:layout_alignParentEnd="true" />
 
         <TextView
             android:id="@+id/ticketPurchasedHeading"
