--- a/app/src/main/res/layout/activity_transactions.xml
+++ b/app/src/main/res/layout/activity_transactions.xml
@@ -21,7 +21,9 @@
         android:dividerHeight="3dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/app_bar_history">
+        android:layout_below="@+id/app_bar_history"
+        android:layout_above="@+id/sync">
+
 
     </ListView>
 
