--- a/app/src/main/res/layout/invoice.xml
+++ b/app/src/main/res/layout/invoice.xml
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/transId"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="26dp"
             android:text="Date:"
             android:textColor="@android:color/background_dark"
             android:textSize="14sp" />
@@ -61,10 +61,10 @@
             android:id="@+id/t_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="25-05-2017"
             android:layout_above="@+id/textView13"
-            android:layout_alignLeft="@+id/t_cust_name"
-            android:layout_alignStart="@+id/t_cust_name"
-            android:text="25-05-2017" />
+            android:layout_alignLeft="@+id/t_trans_id"
+            android:layout_alignStart="@+id/t_trans_id" />
 
         <TextView
             android:id="@+id/textView13"
@@ -81,9 +81,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView13"
-            android:layout_alignLeft="@+id/textView13"
-            android:layout_marginLeft="50dp"
-            android:text="xyz" />
+            android:text="xyz"
+            android:layout_alignTop="@+id/textView13"
+            android:layout_alignLeft="@+id/t_date"
+            android:layout_alignStart="@+id/t_date" />
 
         <TextView
             android:id="@+id/textView15"
@@ -100,9 +101,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView15"
-            android:layout_alignLeft="@+id/textView15"
-            android:layout_marginLeft="50dp"
-            android:text="123456789" />
+            android:text="123456789"
+            android:layout_alignLeft="@+id/t_cust_name"
+            android:layout_alignStart="@+id/t_cust_name" />
 
         <LinearLayout
             android:id="@+id/layout1"
@@ -121,11 +122,10 @@
 
             <TextView
                 android:id="@+id/t_from"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="9dp"
                 android:layout_marginTop="30dp"
-                android:layout_weight="0.20"
                 android:text="TextView" />
         </LinearLayout>
 
@@ -146,7 +146,7 @@
                 android:id="@+id/t_to"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
+                android:layout_marginLeft="24dp"
                 android:text="TextView" />
         </LinearLayout>
 
@@ -166,7 +166,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/layout1"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:gravity="center"
             android:padding="5dp"
             android:text="Tickets Purchased"
