--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#017">
-
-
+    android:background="#000">
 
 
     <LinearLayout
@@ -26,10 +25,10 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:layout_margin="8dp"
-            android:background="@color/colorPrimary"
+            android:background="?android:attr/statusBarColor"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            tools:background="@color/colorAccent">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -53,7 +52,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_margin="8dp"
             android:layout_weight="1"
             android:background="@color/colorPrimary"
             android:gravity="center"
@@ -76,8 +74,6 @@
                 android:textStyle="bold"
                 android:typeface="monospace" />
         </LinearLayout>
-
-
 
 
     </LinearLayout>
