--- a/app/src/main/res/layout-sw600dp/invoice.xml
+++ b/app/src/main/res/layout-sw600dp/invoice.xml
@@ -4,30 +4,40 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@drawable/border">
-    <include
-        android:id="@+id/app_bar_history"
-        layout="@layout/app_bar">
-    </include>
+    > <include
+    android:id="@+id/app_bar_history"
+    layout="@layout/app_bar">
+</include>
+
+    <Button
+        android:id="@+id/print"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Print Invoice"
+        android:textSize="25sp"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="15dp"
         android:layout_marginStart="15dp"
+        android:background="@drawable/border"
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Receipt"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:text=" Epay Receipt"
             android:textColor="@android:color/background_dark"
-            android:textSize="70dp" />
+            android:textSize="50dp" />
 
         <TextView
             android:id="@+id/transId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="87dp"
             android:text="Id:"
             android:textColor="@android:color/background_dark"
@@ -50,6 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/transId"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
             android:text="Date:"
             android:textColor="@android:color/background_dark"
@@ -82,10 +93,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView13"
-            android:text="xyz"
-            android:layout_alignTop="@+id/textView13"
             android:layout_alignLeft="@+id/t_date"
-            android:layout_alignStart="@+id/t_date"/>
+            android:layout_alignStart="@+id/t_date"
+            android:layout_alignTop="@+id/textView13"
+            android:text="xyz" />
 
         <TextView
             android:id="@+id/textView15"
@@ -94,6 +105,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/textView13"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="36dp"
             android:text="Phone:"
             android:textColor="@android:color/background_dark"
@@ -104,9 +116,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/textView15"
-            android:text="123456789"
             android:layout_alignLeft="@+id/t_cust_name"
-            android:layout_alignStart="@+id/t_cust_name"  />
+            android:layout_alignStart="@+id/t_cust_name"
+            android:text="123456789" />
 
         <TextView
             android:id="@+id/textView17"
@@ -115,6 +127,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/textView15"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="36dp"
             android:text="From:"
             android:textColor="@android:color/background_dark"
@@ -136,35 +149,34 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_above="@+id/t_date"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginEnd="75dp"
-            android:layout_marginRight="75dp"
+            android:layout_below="@+id/t_date"
+            android:layout_marginEnd="29dp"
+            android:layout_marginRight="29dp"
             android:background="@drawable/qr_img" />
 
         <TextView
             android:id="@+id/t_from"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
             android:layout_alignBottom="@+id/textView17"
-            android:text="TextView"
             android:layout_alignLeft="@+id/t_contact"
-            android:layout_alignStart="@+id/t_contact" />
+            android:layout_alignStart="@+id/t_contact"
+            android:text="TextView" />
 
         <TextView
             android:id="@+id/t_to"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="30dp"
-            android:layout_alignEnd="@+id/t_from"
-            android:layout_alignRight="@+id/t_from"
-            android:layout_below="@+id/t_from"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="53dp"
             android:text="TextView"
-            android:layout_alignBottom="@+id/textView18" />
+            android:layout_alignBaseline="@+id/textView18"
+            android:layout_alignBottom="@+id/textView18"
+            android:layout_alignRight="@+id/t_from"
+            android:layout_alignEnd="@+id/t_from" />
 
         <TextView
             android:id="@+id/tvTicketPurchased"
@@ -172,8 +184,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/t_to"
             android:layout_centerHorizontal="true"
-            android:gravity="center"
             android:layout_marginTop="36dp"
+            android:gravity="center"
             android:text="Tickets Purchased"
             android:textColor="@android:color/background_dark"
             android:textSize="40dp" />
@@ -290,8 +302,14 @@
 
                 </TableRow>
             </TableLayout>
+
+
         </ScrollView>
     </RelativeLayout>
+
+
+
+
 
 
 </LinearLayout>
