--- a/app/src/main/res/layout/invoice.xml
+++ b/app/src/main/res/layout/invoice.xml
@@ -10,6 +10,12 @@
         layout="@layout/app_bar">
     </include>
 
+    <Button
+        android:id="@+id/print"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Print Invoice"
+        android:textSize="25sp"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
